--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ h6 {
   padding: 0;
 }
 
+.text-sm {
+  font-size: 0.75rem;
+}
+
 .header {
   width: 100%;
   background-color: #ddd;
@@ -49,7 +53,7 @@ h6 {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 0.75rem;
-  margin: 0 0.75rem;
+  margin: 0.25rem 0.75rem;
 }
 
 .nav-icons a.nav-icon {
