--- a/avantgarde/style.css
+++ b/avantgarde/style.css
@@ -5,6 +5,9 @@ body {
   background-color: #111;
   color: #ddd;
   font-family: "Manrope", sans-serif;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 html {
@@ -28,7 +31,7 @@ h6 {
 
 .header {
   width: 100%;
-  background-color: #ddd;
+  background-color: #191919;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,9 +41,9 @@ h6 {
 .header .header__logo {
   width: 80%;
   max-width: 10rem;
-  max-height: 6rem;
-  color: #111;
-  fill: #111;
+  max-height: 2.5rem;
+  color: #e1e1e1;
+  fill: #e1e1e1;
 }
 
 .headline {
@@ -50,14 +53,16 @@ h6 {
 }
 
 .nav-icons {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 0.75rem;
-  margin: 0.25rem 0.75rem;
+  margin: 0.25rem 0.75rem; */
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-icons a.nav-icon {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -68,7 +73,23 @@ h6 {
   font-size: 0.875rem;
   font-weight: 600;
   padding: 1rem 0.5rem;
-  border-radius: 0.5rem;
+  border-radius: 0.5rem; */
+  width: 100%;
+  height: 24vw;
+  max-height: 8rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  background-color: #ccc;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 1rem;
 }
 
 .nav-icon img {
@@ -76,6 +97,10 @@ h6 {
   height: 2rem;
   max-width: 100%;
   margin-bottom: 0.5rem;
+}
+
+.nav-icon .title {
+  text-align: center;
 }
 
 main .drink-section {
