--- a/avantgarde/style.css
+++ b/avantgarde/style.css
@@ -35,7 +35,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.75rem 0;
+  padding: 1rem 0;
 }
 
 .header .header__logo {
@@ -46,6 +46,12 @@ h6 {
   fill: #e1e1e1;
 }
 
+.container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+}
+
 .headline {
   text-align: center;
   margin: 2rem 1rem;
@@ -53,27 +59,11 @@ h6 {
 }
 
 .nav-icons {
-  /* display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  gap: 0.75rem;
-  margin: 0.25rem 0.75rem; */
   display: flex;
   flex-direction: column;
 }
 
 .nav-icons a.nav-icon {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #ccc;
-  color: #111;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 600;
-  padding: 1rem 0.5rem;
-  border-radius: 0.5rem; */
   width: 100%;
   height: 24vw;
   max-height: 8rem;
@@ -85,22 +75,15 @@ h6 {
   align-items: flex-start;
   justify-content: flex-end;
   background-color: #ccc;
-  color: #fff;
   text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 600;
-  padding: 1rem;
-}
-
-.nav-icon img {
-  width: 2rem;
-  height: 2rem;
-  max-width: 100%;
-  margin-bottom: 0.5rem;
 }
 
 .nav-icon .title {
   text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 1rem;
 }
 
 main .drink-section {
@@ -137,6 +120,32 @@ main .drink-section {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   letter-spacing: 0.025rem;
+}
+
+.scroll-top {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e1e1e1;
+  color: #191919;
+  fill: #191919;
+  scale: 0;
+  transition: scale 0.3s ease-in-out;
+}
+
+.scroll-top.visible {
+  scale: 1;
+}
+
+.scroll-top > svg {
+  width: 1.75rem;
+  height: 1.75rem;
 }
 
 .footer {
