--- a/avantgarde/style.css
+++ b/avantgarde/style.css
@@ -135,6 +135,9 @@ main .drink-section {
   background-color: #e1e1e1;
   color: #191919;
   fill: #191919;
+  cursor: pointer;
+  border: none;
+  outline: none;
   scale: 0;
   transition: scale 0.3s ease-in-out;
 }
