--- a/avantgarde/style.css
+++ b/avantgarde/style.css
@@ -4,6 +4,8 @@ body {
   box-sizing: border-box;
   background-color: #111;
   color: #ddd;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-family: "Manrope", sans-serif;
   width: 100%;
   max-width: 100vw;
@@ -132,14 +134,15 @@ main .drink-section {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #e1e1e1;
+  background-color: #e1e1e170;
+  backdrop-filter: blur(0.2rem);
   color: #191919;
   fill: #191919;
   cursor: pointer;
   border: none;
   outline: none;
   scale: 0;
-  transition: scale 0.3s ease-in-out;
+  transition: scale 0.15s ease-in-out;
 }
 
 .scroll-top.visible {
